kubernetes/argocd/main-cluster/manifests/lidarr/lidarr.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      name: lidarr
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: ghcr.io/hotio/lidarr:pr-plugins-1.4.1.3564
        imagePullPolicy: Always
        volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: config
          mountPath: /config
        - name: config-xml
          mountPath: /config/config.xml
          subPath: config.xml
        - name: music
          mountPath: /music
        ports:
        - name: web
          containerPort: 8686
          protocol: TCP
      volumes: 
      - name: downloads
        nfs:
          server: ceph-nfs.home
          path: /cephfs/media/downloads
      - name: config
        persistentVolumeClaim:
          claimName: lidarr-config
      - name: config-xml
        configMap:
          name: lidarr-config-xml
      - name: music
        nfs:
          server: ceph-nfs.home
          path: /cephfs/media/Music
