kubernetes/argocd/main-cluster/manifests/lidarr/lidarr.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lidarr
  namespace: lidarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lidarr.home
spec:
  selector:
    app: lidarr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8686
  type: LoadBalancer
  loadBalancerIP: 192.168.0.216
