kubernetes/argocd/main-cluster/manifests/lidarr/lidarr.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: lidarr
spec:
  rules:
  - host: lidarr.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              number: 80
